objects/vlocity_cmt__CachedAPIChange__c.object
<CustomObject>
    <description>Data model to be used for tracking the cached dependency objects.</description>
    <fields>
        <fullName>vlocity_cmt__ChangeType__c</fullName>
        <description>This indicates the type of Change. It can either be Offer, Pricing, Hierarchy. Example of &apos;Offer&apos; change is : Change in Name, description, attribute etc.</description>
        <label>ChangeType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>offer</fullName>
                    <default>true</default>
                    <label>offer</label>
                </value>
                <value>
                    <fullName>hierarchy</fullName>
                </value>
                <value>
                    <fullName>pricing</fullName>
                </value>
                <value>
                    <fullName>context</fullName>
                </value>
                <value>
                    <fullName>promotionWrapper</fullName>
                </value>
                <value>
                    <fullName>simpleOffer</fullName>
                </value>
                <value>
                    <fullName>availability</fullName>
                </value>
                <value>
                    <fullName>basket</fullName>
                </value>
                <value>
                    <fullName>Ancestors</fullName>
                </value>
                <value>
                    <fullName>ContainsItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CodeType__c</fullName>
        <description>This indicates the type of Code__c. It can either be Catalog/Offer.</description>
        <label>CodeType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>catalog</fullName>
                    <default>true</default>
                    <label>catalog</label>
                </value>
                <value>
                    <fullName>offer</fullName>
                </value>
                <value>
                    <fullName>data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <description>This will store the code of catalog or the offer that gets changed/impacted due to change of another offer.</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartTime__c</fullName>
        <description>It will store the effectivity of the offer i.e. from what time onwards the offer would be effective.</description>
        <label>EffectiveStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationTime__c</fullName>
        <description>It will store the effectivity of the offer i.e. from what time onwards offer would ineffective.</description>
        <label>ExpirationTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsProcessedByPC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Processed by Platform Cache update job.</description>
        <label>Is Processed By Platform Cache</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectId__c</fullName>
        <description>This will store the Id of Sobject.</description>
        <label>SObject Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferId__c</fullName>
        <description>This will store the unique Id of a specific version of a product which got impacted due to the changes made on SObjects.</description>
        <label>OfferId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CachedAPIChange</label>
    <nameField>
        <label>CachedAPIChange Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIChanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>